--- a/Assets/M.html
+++ b/Assets/M.html
@@ -4,116 +4,235 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>GlitchFlix</title>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 <style>
-body { margin:0; background:#000; color:#f00; font-family:"Poppins",sans-serif; overflow-x:hidden; }
-header { background:#111; color:#f00; padding:1rem 2rem; text-align:center; font-size:1.6rem; border-bottom:2px solid #f00; text-shadow:0 0 10px #f00; }
-#search { width:80%; display:block; margin:1.5rem auto; padding:0.7rem 1rem; border:2px solid #f00; border-radius:10px; background:#111; color:#f00; font-size:1rem; outline:none; }
-#search:focus { box-shadow:0 0 12px #f00; }
-h2 { color:#f00; margin-left:1rem; }
-.movies { display:grid; grid-template-columns:repeat(auto-fill, minmax(180px, 1fr)); gap:1rem; padding:1rem; }
-.movie { background:#111; border-radius:10px; overflow:hidden; cursor:pointer; transition:transform 0.3s ease, box-shadow 0.3s ease; }
-.movie:hover { transform:scale(1.05); box-shadow:0 0 15px #f00; }
-.movie img { width:100%; height:270px; object-fit:cover; }
-.movie h3 { text-align:center; margin:0.5rem; font-size:1rem; color:#f00; }
-
-/* Overlay / video */
-.overlay { position:fixed; inset:0; background:rgba(0,0,0,0.95); display:none; flex-direction:column; align-items:center; justify-content:center; overflow-y:auto; z-index:1000; padding:1rem; }
-.overlay.active { display:flex; }
-#player { width:90%; height:60vh; border:2px solid #f00; border-radius:10px; background:#000; margin-bottom:1rem; }
-.close { color:#f00; cursor:pointer; font-size:1.5rem; margin-bottom:1rem; border:2px solid #f00; border-radius:6px; padding:0.3rem 0.7rem; background:#111; }
-.close:hover { background:#f00; color:#000; }
-
-/* Startup warning */
-#warningModal { position:fixed; inset:0; background:rgba(0,0,0,0.9); display:flex; align-items:center; justify-content:center; flex-direction:column; color:#f00; z-index:2000; }
-#warningModal button { margin-top:20px; padding:10px 20px; border-radius:8px; border:2px solid #f00; background:#111; color:#f00; cursor:pointer; font-weight:bold; }
-#warningModal button:hover { background:#f00; color:#000; }
+*{margin:0;padding:0;box-sizing:border-box;}
+body{background:#000;color:#fff;font-family:'Poppins',sans-serif;overflow-x:hidden;}
+header{position:sticky;top:0;z-index:1000;background:#111;display:flex;align-items:center;justify-content:space-between;padding:15px 30px;border-bottom:2px solid #c00;}
+#logo{font-size:1.8rem;font-weight:bold;color:#ff3030;}
+#openSearch{background:#111;border:none;color:#fff;font-size:1.2rem;cursor:pointer;}
+#openSearch:hover{color:#ff3030;}
+.section-title{font-size:1.4rem;color:#ff3030;margin:20px 30px 10px;border-left:5px solid #ff3030;padding-left:10px;}
+.movie-row{display:flex;overflow-x:auto;padding:0 30px 20px;gap:15px;scroll-behavior:smooth;}
+.movie-row::-webkit-scrollbar{height:8px;}
+.movie-row::-webkit-scrollbar-thumb{background:#c00;border-radius:4px;}
+.movie{flex:0 0 auto;width:180px;background:#111;border-radius:10px;overflow:hidden;cursor:pointer;transition: transform 0.3s, box-shadow 0.3s;position:relative;}
+.movie:hover{transform:scale(1.07);box-shadow:0 0 15px #c00;}
+.movie img{width:100%;height:270px;object-fit:cover;border-bottom:2px solid #c00;}
+.movie-info{text-align:center;padding:8px;}
+.movie-info h3{font-size:1rem;margin-bottom:5px;}
+.rating{color:#ff3030;font-weight:bold;}
+#movieDetailOverlay{display:none;position:fixed;inset:0;background: rgba(0,0,0,0.95);z-index:3000;padding:30px;overflow-y:auto;color:#fff;}
+#movieDetailOverlay.show{display:block;}
+#movieDetailOverlay .content{display:flex;flex-wrap:wrap;gap:20px;max-width:900px;margin:0 auto;background:#111;padding:20px;border-radius:10px;position:relative;}
+#movieDetailOverlay img{width:300px;height:450px;object-fit:cover;border-radius:10px;flex-shrink:0;}
+#movieDetailOverlay .details{flex:1;display:flex;flex-direction:column;}
+#movieDetailOverlay h2{color:#ff3030;margin-bottom:10px;font-size:1.8rem;}
+#movieDetailOverlay p{margin-bottom:8px;line-height:1.4;}
+#playButton{padding:12px 25px;background:#c00;border:none;color:#fff;border-radius:5px;cursor:pointer;font-weight:bold;transition: background 0.3s;margin-top:10px;font-size:1rem;}
+#playButton:hover{background:#ff3030;}
+#closeDetail{position:absolute;top:15px;right:25px;font-size:2rem;cursor:pointer;color:#fff;}
+#player{margin-top:20px;width:100%;height:480px;border:none;border-radius:10px;display:none;}
+#searchOverlay{display:none;position:fixed;inset:0;background: rgba(0,0,0,0.95);z-index:4000;padding:30px;overflow-y:auto;}
+#searchOverlay.show{display:block;}
+#closeSearch{position:absolute;top:15px;right:25px;font-size:2rem;cursor:pointer;color:#fff;}
+#searchControls{display:flex;justify-content:center;align-items:center;gap:10px;margin-bottom:20px;position:relative;}
+#searchInputOverlay{width:60%;max-width:400px;padding:12px 15px;font-size:1.2rem;border-radius:5px;border:1px solid #c00;background:#000;color:#fff;outline:none;}
+#searchInputOverlay:focus{border-color:#ff3030;}
+#categoryBtnOverlay{padding:10px 15px;border:none;background:#111;color:#fff;border-radius:5px;cursor:pointer;font-size:1rem;}
+#categoryBtnOverlay:hover{background:#c00;}
+#categoryMenu{display:none;position:absolute;top:50px;background:#111;border:1px solid #c00;border-radius:5px;padding:10px;z-index:4500;flex-direction:column;}
+#categoryMenu button{background:#111;color:#fff;border:none;padding:8px 15px;margin:3px 0;border-radius:5px;cursor:pointer;transition: background 0.3s;text-align:left;}
+#categoryMenu button:hover{background:#c00;}
+#searchResults{display:flex;flex-wrap:wrap;gap:15px;justify-content:center;}
 </style>
 </head>
 <body>
 
-<header>GlitchFlix</header>
-<input type="text" id="search" placeholder="Search for a movie..." />
+<header>
+  <div id="logo">GlitchFlix</div>
+  <button id="openSearch"><i class="fas fa-search"></i></button>
+</header>
 
-<h2>Popular Movies</h2>
-<div class="movies" id="movieList"><p style="text-align:center;color:#888;">Loading movies...</p></div>
+<main>
+  <h2 class="section-title" id="recentTitle" style="display:none;">Recently Watched</h2>
+  <div class="movie-row" id="recentList"></div>
 
-<div class="overlay" id="overlay">
-  <button class="close" id="closeOverlay">Close</button>
-  <iframe id="player"></iframe>
+  <h2 class="section-title">Popular Movies</h2>
+  <div class="movie-row" id="popularList"></div>
+
+  <h2 class="section-title">Top Rated Movies</h2>
+  <div class="movie-row" id="topRatedList"></div>
+
+  <h2 class="section-title">Upcoming Movies</h2>
+  <div class="movie-row" id="upcomingList"></div>
+</main>
+
+<!-- Movie Detail Overlay -->
+<div id="movieDetailOverlay">
+  <div id="closeDetail">&times;</div>
+  <div class="content">
+    <img id="detailPoster" src="" alt="Poster">
+    <div class="details">
+      <h2 id="detailTitle"></h2>
+      <p><strong>Rating:</strong> <span id="detailRating"></span></p>
+      <p><strong>Release Date:</strong> <span id="detailRelease"></span></p>
+      <p><strong>Runtime:</strong> <span id="detailRuntime"></span> min</p>
+      <p><strong>Genres:</strong> <span id="detailGenres"></span></p>
+      <p id="detailOverview"></p>
+      <button id="playButton">Play</button>
+      <iframe id="player" allowfullscreen></iframe>
+    </div>
+  </div>
 </div>
 
-<div id="warningModal">
-  <h2>Warning: Videos may contain ads!</h2>
-  <p>Please close any ads that appear before continuing.</p>
-  <button id="closeWarning">I Understand</button>
+<!-- Search Overlay -->
+<div id="searchOverlay">
+  <div id="closeSearch">&times;</div>
+  <div id="searchControls">
+    <input type="text" id="searchInputOverlay" placeholder="Search for a movie...">
+    <button id="categoryBtnOverlay"><i class="fas fa-list"></i> Categories</button>
+    <div id="categoryMenu"></div>
+  </div>
+  <div class="movie-row" id="searchResults"></div>
 </div>
 
 <script>
 const API_KEY = "0e33c92186263620ce8c7f6b8fb35b00";
 const API_URL = "https://api.themoviedb.org/3";
-const IMAGE_BASE = "https://image.tmdb.org/t/p/w500";
+const IMAGE_BASE_URL = "https://image.tmdb.org/t/p/w500";
+const FALLBACK_IMAGE_URL = "https://dummyimage.com/200x300/111/ff0000&text=No+Image";
 
-const searchInput = document.getElementById("search");
-const movieList = document.getElementById("movieList");
-const overlay = document.getElementById("overlay");
+// Elements
+const searchOverlay = document.getElementById("searchOverlay");
+const openSearch = document.getElementById("openSearch");
+const closeSearch = document.getElementById("closeSearch");
+const searchInputOverlay = document.getElementById("searchInputOverlay");
+const searchResults = document.getElementById("searchResults");
+const categoryBtnOverlay = document.getElementById("categoryBtnOverlay");
+const categoryMenu = document.getElementById("categoryMenu");
+
+const recentTitle = document.getElementById("recentTitle");
+const recentList = document.getElementById("recentList");
+const popularList = document.getElementById("popularList");
+const topRatedList = document.getElementById("topRatedList");
+const upcomingList = document.getElementById("upcomingList");
+
+const movieDetailOverlay = document.getElementById("movieDetailOverlay");
+const closeDetail = document.getElementById("closeDetail");
+const detailPoster = document.getElementById("detailPoster");
+const detailTitle = document.getElementById("detailTitle");
+const detailRating = document.getElementById("detailRating");
+const detailRelease = document.getElementById("detailRelease");
+const detailRuntime = document.getElementById("detailRuntime");
+const detailGenres = document.getElementById("detailGenres");
+const detailOverview = document.getElementById("detailOverview");
+const playButton = document.getElementById("playButton");
 const player = document.getElementById("player");
-const closeOverlay = document.getElementById("closeOverlay");
-const warningModal = document.getElementById("warningModal");
-const closeWarning = document.getElementById("closeWarning");
 
-// Close warning
-closeWarning.onclick = () => warningModal.style.display = "none";
+// --- Helpers ---
+function saveRecentlyWatched(item){
+  let watched = JSON.parse(localStorage.getItem("recentlyWatched")||"[]");
+  watched = watched.filter(m=>m.id!==item.id);
+  watched.unshift(item);
+  if(watched.length>5) watched.pop();
+  localStorage.setItem("recentlyWatched",JSON.stringify(watched));
+  renderRecentlyWatched();
+}
+function renderRecentlyWatched(){
+  let watched = JSON.parse(localStorage.getItem("recentlyWatched")||"[]");
+  recentTitle.style.display = watched.length>0?"block":"none";
+  recentList.innerHTML="";
+  watched.forEach(item=>recentList.appendChild(createCard(item)));
+}
+function createCard(item){
+  const div=document.createElement("div");
+  div.classList.add("movie");
+  const img=document.createElement("img");
+  img.src=item.poster_path?IMAGE_BASE_URL+item.poster_path:FALLBACK_IMAGE_URL;
+  img.onerror=()=>img.src=FALLBACK_IMAGE_URL;
+  const info=document.createElement("div");
+  info.classList.add("movie-info");
+  info.innerHTML=`<h3>${item.title||item.name}</h3><div class="rating">${item.vote_average.toFixed(1)}</div>`;
+  div.appendChild(img); div.appendChild(info);
+  div.onclick=()=>{ searchOverlay.classList.remove("show"); showDetail(item.id); };
+  return div;
+}
+async function fetchItems(url){ 
+  try{ 
+    const res=await fetch(url); 
+    const data=await res.json(); 
+    return data.results || []; 
+  } catch(e){ 
+    console.error(e); 
+    return []; 
+  }
+}
+async function renderRow(url, container){ 
+  const items = await fetchItems(url); 
+  container.innerHTML=""; 
+  items.forEach(item=>container.appendChild(createCard(item)));
+}
 
-// Load initial movies
-loadPopularMovies();
+// --- Detail Overlay ---
+async function showDetail(id){
+  const res = await fetch(`${API_URL}/movie/${id}?api_key=${API_KEY}&language=en-US`);
+  const data = await res.json();
+  detailPoster.src = data.poster_path?IMAGE_BASE_URL+data.poster_path:FALLBACK_IMAGE_URL;
+  detailTitle.textContent = data.title;
+  detailRating.textContent = data.vote_average.toFixed(1);
+  detailRelease.textContent = data.release_date;
+  detailRuntime.textContent = data.runtime||'N/A';
+  detailGenres.textContent = data.genres.map(g=>g.name).join(", ");
+  detailOverview.textContent = data.overview;
+  movieDetailOverlay.classList.add("show");
+  player.style.display="none";
+  playButton.onclick=()=>{
+    player.src = `https://player.videasy.net/movie/${id}?color=FF0000`;
+    player.style.display="block";
+  };
+  saveRecentlyWatched({...data,media_type:"movie"});
+}
 
-// Search movies
-searchInput.addEventListener("input", async () => {
-  const q = searchInput.value.trim();
-  if (!q) { loadPopularMovies(); return; }
-  searchMovies(q);
+// --- Event Listeners ---
+closeDetail.onclick=()=>{ movieDetailOverlay.classList.remove("show"); player.src=""; player.style.display="none"; };
+openSearch.onclick=()=>searchOverlay.classList.add("show");
+closeSearch.onclick=()=>searchOverlay.classList.remove("show");
+searchInputOverlay.addEventListener("input", async()=>{
+  const q = searchInputOverlay.value.trim();
+  if(!q){ searchResults.innerHTML=""; return; }
+  const items = await fetchItems(`${API_URL}/search/movie?api_key=${API_KEY}&language=en-US&query=${encodeURIComponent(q)}&page=1&include_adult=false`);
+  searchResults.innerHTML="";
+  items.forEach(m=>searchResults.appendChild(createCard(m)));
 });
 
-// Fetch and display popular movies
-async function loadPopularMovies() {
-  try {
-    const res = await fetch(`${API_URL}/movie/popular?api_key=${API_KEY}&language=en-US&page=1`);
-    const data = await res.json();
-    displayMovies(data.results);
-  } catch(err) { movieList.innerHTML = "<p style='color:#f00;text-align:center'>Error loading movies.</p>"; console.error(err);}
-}
-
-// Search movies
-async function searchMovies(query) {
-  try {
-    const res = await fetch(`${API_URL}/search/movie?api_key=${API_KEY}&query=${encodeURIComponent(query)}`);
-    const data = await res.json();
-    displayMovies(data.results);
-  } catch(err) { movieList.innerHTML = "<p style='color:#f00;text-align:center'>Search failed.</p>"; console.error(err);}
-}
-
-// Display movies in grid
-function displayMovies(movies) {
-  movieList.innerHTML = "";
-  if(!movies || movies.length===0){ movieList.innerHTML="<p style='text-align:center;color:#888;'>No results found.</p>"; return; }
-  movies.forEach(m=>{
-    const div=document.createElement("div");
-    div.className="movie";
-    div.innerHTML=`<img src="${m.poster_path?IMAGE_BASE+m.poster_path:'https://dummyimage.com/200x300/111/ff0000&text=No+Image'}" alt="${m.title}"><h3>${m.title}</h3>`;
-    div.onclick = ()=>openMovieOverlay(m.id);
-    movieList.appendChild(div);
+// --- Categories ---
+let genres={};
+async function fetchGenres(){
+  const res=await fetch(`${API_URL}/genre/movie/list?api_key=${API_KEY}&language=en-US`);
+  const data=await res.json();
+  data.genres.forEach(g=>genres[g.name]=g.id);
+  Object.keys(genres).forEach(name=>{
+    const btn=document.createElement("button");
+    btn.textContent=name;
+    btn.onclick=async()=>{
+      const movies = await fetchItems(`${API_URL}/discover/movie?api_key=${API_KEY}&with_genres=${genres[name]}&language=en-US&page=1`);
+      searchResults.innerHTML=""; movies.forEach(m=>searchResults.appendChild(createCard(m)));
+      searchOverlay.classList.add("show"); categoryMenu.style.display="none";
+    };
+    categoryMenu.appendChild(btn);
   });
 }
+categoryBtnOverlay.onclick=()=>{ categoryMenu.style.display = categoryMenu.style.display==="flex"?"none":"flex"; };
 
-// Open overlay for movie playback
-function openMovieOverlay(id){
-  overlay.classList.add("active");
-  player.src = `https://player.videasy.net/movie/${id}?color=FF0000`;
-}
-
-// Close overlay
-closeOverlay.onclick = () => { overlay.classList.remove("active"); player.src = ""; }
+// --- Init ---
+window.onload=()=>{
+  renderRow(`${API_URL}/movie/popular?api_key=${API_KEY}&language=en-US&page=1` , popularList);
+  renderRow(`${API_URL}/movie/top_rated?api_key=${API_KEY}&language=en-US&page=1` , topRatedList);
+  renderRow(`${API_URL}/movie/upcoming?api_key=${API_KEY}&language=en-US&page=1` , upcomingList);
+  renderRecentlyWatched();
+  fetchGenres();
+};
 </script>
-
 </body>
 </html>
